--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -13,6 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Install Qt
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y qt5-default qt5-qmake
 
     - name: QMAKE init
       run: qmake
