--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install Qt
       run: |
         sudo apt-get update
-        sudo apt-get install -y qt5-default qt5-qmake
+        sudo apt-get install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools
 
     - name: QMAKE init
       run: qmake
